--- a/whattoeat/application/modules/estabelecimento/views/scripts/index/fale-conosco.phtml
+++ b/whattoeat/application/modules/estabelecimento/views/scripts/index/fale-conosco.phtml
@@ -2,8 +2,7 @@
 
     <div class="heading">
     
-    <h2 style="font-size:21px !important;"> Escreva suas dúvidas, sugestões ou críticas. Estamos muito interessados em entender como poderemos
-        lhe atender melhor. 
+    <h2 style="font-size:21px !important;"> Escreva suas dúvidas, sugestões ou críticas. Estamos muito interessados em lhe atender melhor. 
     </h2>
 
     
