--- a/whattoeat/application/modules/portal/views/scripts/index/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/index/index.phtml
@@ -1,7 +1,7 @@
 <div id="borderTopo"></div>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <link rel="shortcut icon" type="image/ico" href="img/favicon.ico"/>
+    <link rel="shortcut icon" type="image/ico" href="/img/favicon.ico"/>
     <!-- Bootstrap core CSS 
     <link type="text/css" href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" />-->
 
