--- a/whattoeat/application/modules/estabelecimento/views/scripts/index/quem-somos.phtml
+++ b/whattoeat/application/modules/estabelecimento/views/scripts/index/quem-somos.phtml
@@ -21,7 +21,7 @@
         do seu for pesquisado. Se já for conhecido, aproveite para chamar atenção nas características especiais do seu produto usando 
         nossa forma inovadora de cadastro. </p>
         
-        <p class="font-style-class">Seja bem-vindo ao Coma Bem! </p>
+        <p class="font-style-class">Seja bem-vindo ao BuscaComaBem! </p>
                
      
     </div>
