Inclusaõ da possibilidade de filtrar pelo NSU na consulta

--- a/whattoeat/application/modules/estabelecimento/views/scripts/index/fale-conosco.phtml
+++ b/whattoeat/application/modules/estabelecimento/views/scripts/index/fale-conosco.phtml
@@ -38,6 +38,9 @@
         
      
     </div>
+            
+            
+            <div style="display:block;"> Ou nos envie um email: suporte@buscacomabem.com.br</div>            
 	
 </div>
 <style>
