Setting default values for latitude and longitude

--- a/whattoeat/application/modules/portal/views/scripts/index/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/index/index.phtml
@@ -146,8 +146,8 @@ if (!empty($this->nomeCliente))
             </div>
 
             <br><br><br>
-            <input type="hidden" id="latitude" name="latitude">
-            <input type="hidden" id="longitude" name="longitude">
+            <input type="hidden" id="latitude" name="latitude" value="-1">
+            <input type="hidden" id="longitude" name="longitude" value="-1">
             <input type="hidden" id="cidade" name="cidade">
 
         </form>
