--- a/whattoeat/application/modules/estabelecimento/views/layouts/header.phtml
+++ b/whattoeat/application/modules/estabelecimento/views/layouts/header.phtml
@@ -6,6 +6,12 @@ $this->headTitle()->setSeparator(' - ');
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+        <title>Busca Coma Bem - Divulgue seu restaurante, lanchonete ou bistro. Pedidos online. Busca avançada por estabelecimento, produto, ingrediantes, caloria, etc.  </title>
+    <meta name="description" content="Os estabelecimentos parceiros poderão contar com uma plataforma moderna e gratuita para divulgarem seus produtos. Você ainda não é muito 
+        conhecido na praça? Não se preocupe, aqui no Como Bem! você sempre aparecerá quando um produto com as características 
+        do seu for pesquisado. Se já for conhecido, aproveite para chamar atenção nas características especiais do seu produto usando 
+        nossa forma inovadora de cadastro.">
+     
 
         <?php echo $this->headMeta(); ?>
         <title><?php echo $this->pageTitle; ?></title>
