--- a/whattoeat/application/modules/estabelecimento/views/layouts/header.phtml
+++ b/whattoeat/application/modules/estabelecimento/views/layouts/header.phtml
@@ -7,10 +7,9 @@ $this->headTitle()->setSeparator(' - ');
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <title>Busca Coma Bem - Divulgue seu restaurante, lanchonete ou bistro. Pedidos online. Busca avançada por estabelecimento, produto, ingrediantes, caloria, etc.  </title>
-    <meta name="description" content="Os estabelecimentos parceiros poderão contar com uma plataforma moderna e gratuita para divulgarem seus produtos. Você ainda não é muito 
-        conhecido na praça? Não se preocupe, aqui no Como Bem! você sempre aparecerá quando um produto com as características 
-        do seu for pesquisado. Se já for conhecido, aproveite para chamar atenção nas características especiais do seu produto usando 
-        nossa forma inovadora de cadastro.">
+    <meta name="description" content="Os estabelecimentos parceiros poderão contar com uma plataforma moderna e gratuita para divulgarem seus produtos. 
+    Aqui você sempre aparecerá quando um produto com as características do seu for pesquisado. Aproveite para chamar atenção nas características especiais do seu produto usando 
+        nossa forma inovadora de cadastro.  Keywords: comida saudavel, comer bem, buscar restaurantes, cardapio saudavel, divulgacao de lanchonetes e restaurantes">
      
 
         <?php echo $this->headMeta(); ?>
