--- a/whattoeat/application/modules/estabelecimento/views/scripts/index/quem-somos.phtml
+++ b/whattoeat/application/modules/estabelecimento/views/scripts/index/quem-somos.phtml
@@ -11,17 +11,16 @@
     <div class="main-content">
         <p class="font-style-class">Somos uma empresa de tecnologia que alia os melhores recursos disponíveis para prover soluções inovadoras
         e eficientes para os restaurantes e seus usuários. Nosso principal objetivo é fornecer uma maneira para que os usuários possam encontrar de forma rápida e precisa
-        o melhor produto para atendê-lo. Diferentemente de outros aplicativos de descoberta e pedido de alimentos, no Coma Bem! 
-        você direciona sua pesquisa para o produto que deseja e não para um estabelecimento específico. Assim, você tem a certeza
-        que está levando em consideração todas as opções disponíveis e poderá compará-las para escolher a que melhor lhe atende. 
-        Descubra novos pratos e lugares baseado em suas necessidades, interesses ou mesmo em sua curiosidade. </p>
+        o melhor produto para atendê-lo. Você pode fazer sua pesquisa para o produto que deseja ou um estabelecimento específico. Assim, você tem a certeza
+        que está levando em consideração todas as opções disponíveis e escolher a que melhor lhe atende. 
+        Descubra novos pratos saudáveis e lugares baseado em suas necessidades, interesses ou mesmo sua curiosidade. </p>
   
         <p class="font-style-class">Os estabelecimentos parceiros poderão contar com uma plataforma moderna e gratuita para divulgarem seus produtos. Você ainda não é muito 
-        conhecido na praça? Não se preocupe, aqui no Como Bem! você sempre aparecerá quando um produto com as características 
+        conhecido na praça? Não se preocupe, aqui você sempre aparecerá quando um produto com as características 
         do seu for pesquisado. Se já for conhecido, aproveite para chamar atenção nas características especiais do seu produto usando 
         nossa forma inovadora de cadastro. </p>
         
-        <p class="font-style-class">Seja bem-vindo ao BuscaComaBem! </p>
+        <p class="font-style-class">Seja bem-vindo!</p>
                
      
     </div>
